<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/yuuu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3313030">


    <Button
        android:id="@+id/buttonuploadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="16dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewselect" />

    <EditText
        android:id="@+id/editTextdes"
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewdes" />

    <TextView
        android:id="@+id/textViewdes"
        android:layout_width="86dp"
        android:layout_height="35dp"
        android:layout_marginEnd="307dp"
        android:text="@string/description"
        android:textColor="#fffafafa"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewloc"
        android:layout_width="86dp"
        android:layout_height="35dp"
        android:layout_marginTop="7dp"
        android:text="@string/location"
        android:textColor="#fffafafa"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextdes" />

    <EditText
        android:id="@+id/editTexttag"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/location"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewloc" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="279dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/hjhv"
        app:layout_constraintBottom_toTopOf="@+id/imageViewselect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTexttag"
        app:srcCompat="@drawable/ic_photo" />

    <ImageView
        android:id="@+id/imageViewgmap"
        android:layout_width="49dp"
        android:layout_height="46dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todooo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editTexttag"
        app:layout_constraintTop_toBottomOf="@+id/editTextdes"
        />

    <ImageView
        android:id="@+id/imageViewselect"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
         />

    <ImageView
        android:id="@+id/imageViewcamera"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todoo"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
         />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="104dp"
        android:contentDescription="@string/uh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        />

    <TextView
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="4dp"
        android:text="@string/camera"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttongaller"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewcamera" />

    <TextView
        android:id="@+id/buttongaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="120dp"
        android:text="@string/gallery"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
</androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>